@@ -176,7 +176,7 @@ operator "god" {
          * If this is specified an oper will not be given oper_umodes
          * These are described above oper_only_umodes in general {};
          */
-        #umodes = locops, servnotice, operwall, wallop;
+        #umodes = servnotice, operwall, wallop;
 
         /* snomask: specific server notice mask on oper up.
          * If this is specified an oper will not be given oper_snomask.
@@ -397,8 +397,8 @@ general {
         max_targets = 4;
         client_flood = 20;
         use_whois_actually = no;
-        oper_only_umodes = operwall, locops, servnotice;
-        oper_umodes = locops, servnotice, operwall, wallop;
+        oper_only_umodes = operwall, servnotice;
+        oper_umodes = servnotice, operwall, wallop;
         oper_snomask = "+s";
         burst_away = yes;
         nick_delay = 0 seconds; # 15 minutes if you want to enable this
