@@ -340,7 +340,7 @@ operator "god" {
          * If this is specified an oper will not be given oper_umodes
          * These are described above oper_only_umodes in general {};
          */
-        #umodes = locops, servnotice, operwall, wallop;
+        #umodes = servnotice, operwall, wallop;
 
         /* snomask: specific server notice mask on oper up.
          * If this is specified an oper will not be given oper_snomask.
@@ -463,7 +463,6 @@ cluster {
          *    kline   - share perm klines
          *    tkline  - share temp klines
          *    unkline - share unklines
-         *    locops  - share locops
          *    xline   - share perm xlines
          *    txline  - share temp xlines
          *    unxline - share unxlines
@@ -476,11 +475,6 @@ cluster {
         /* share klines/unklines/xlines with *.lan */
         name = "*.lan";
         flags = kline, unkline, xline;
-
-        /* share locops with irc.ircd-ratbox.org and ircd.ircd-ratbox.org */
-        name = "irc.ircd-ratbox.org";
-        name = "ircd.ircd-ratbox.org";
-        flags = locops;
 };
 
 /* service{}: privileged servers (services). These servers have extra
@@ -519,7 +513,6 @@ shared {
          *    tresv   - allow setting temp resvs
          *    unresv  - allow removing xlines
          *    all     - allow oper/server to do all of above.
-         *    locops  - allow locops - only used for servers who cluster
          *    rehash  - allow rehashing
          *    none    - disallow everything
          */
@@ -1007,7 +1000,6 @@ general {
          * +D - deaf       - Don't see channel messages
          * +i - invisible  - Not shown in NAMES or WHO unless you share a 
          *                   a channel
-         * +l - locops     - See LOCOPS messages
          * +Q - noforward  - Unaffected by channel forwarding
          * +R - regonlymsg - No messages from unindentified
          * +s - servnotice - See server notices
@@ -1016,10 +1008,10 @@ general {
          */
          
         /* oper only umodes: usermodes only opers may set */
-        oper_only_umodes = operwall, locops, servnotice;
+        oper_only_umodes = operwall, servnotice;
 
         /* oper umodes: default usermodes opers get when they /oper */
-        oper_umodes = locops, servnotice, operwall, wallop;
+        oper_umodes = servnotice, operwall, wallop;
 
         /* oper snomask: default snomask opers get when they /oper,
          * provided they have umode +s set */
