@@ -1,4 +1,0 @@
-LOCOPS :<message>
-
-Sends an LOCOPS message of <message> to all
-opers on local server who are umode +l
