@@ -299,7 +299,6 @@ static struct mode_table umode_table[] = {
 	{"callerid",	UMODE_CALLERID	},
 	{"deaf",	UMODE_DEAF	},
 	{"invisible",	UMODE_INVISIBLE	},
-	{"locops",	UMODE_LOCOPS	},
 	{"noforward",	UMODE_NOFORWARD	},
 	{"regonlymsg",	UMODE_REGONLYMSG},
 	{"servnotice",	UMODE_SERVNOTICE},
@@ -364,7 +363,6 @@ static struct mode_table cluster_table[] = {
 	{ "kline",	SHARED_PKLINE	},
 	{ "tkline",	SHARED_TKLINE	},
 	{ "unkline",	SHARED_UNKLINE	},
-	{ "locops",	SHARED_LOCOPS	},
 	{ "xline",	SHARED_PXLINE	},
 	{ "txline",	SHARED_TXLINE	},
 	{ "unxline",	SHARED_UNXLINE	},
@@ -386,7 +384,6 @@ static struct mode_table shared_table[] =
 	{ "unxline",	SHARED_UNXLINE	},
 	{ "tresv",	SHARED_TRESV	},
 	{ "unresv",	SHARED_UNRESV	},
-	{ "locops",	SHARED_LOCOPS	},
 	{ "rehash",	SHARED_REHASH	},
 	{ "all",	SHARED_ALL	},
 	{ "none",	0		},
