@@ -789,7 +789,7 @@ set_default_conf(void)
 	ConfigFileEntry.compression_level = 4;
 #endif
 
-	ConfigFileEntry.oper_umodes = UMODE_LOCOPS | UMODE_SERVNOTICE |
+	ConfigFileEntry.oper_umodes = UMODE_SERVNOTICE |
 		UMODE_OPERWALL | UMODE_WALLOP;
 	ConfigFileEntry.oper_only_umodes = UMODE_SERVNOTICE;
 	ConfigFileEntry.oper_snomask = SNO_GENERAL;
